Revert "completed first quote"
This reverts commit 75e77c91b25ed839b20c25facabb2d8538990ab1.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<h1> You are the creator of your own destiny... so what !!!!/h1>
+<h1> You are the creator of your own destiny </h1>
 
 </body>
 
